--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/task_manager
+spring.datasource.username=postgres
+spring.datasource.password=12345
 
+spring.flyway.enabled=true
+spring.flyway.url='jdbc:postgresql://localhost:5432/task_manager'
+spring.flyway.user=postgres
+spring.flyway.password=12345
+spring.flyway.locations=classpath:db/migration
+#spring.flyway.baseline-on-migrate=true
